--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@keyv/sqlite": "^2.0.2",
     "axios": "^0.21.1",
     "bluebird": "^3.7.2",
     "commander": "^8.1.0",
