--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@keyv/sqlite": "^2.0.2",
     "axios": "^0.21.1",
     "bluebird": "^3.7.2",
+    "cli-progress": "^3.10.0",
     "commander": "^8.1.0",
     "consola": "^2.15.3",
     "fast-csv": "^4.3.6",
