--- a/lib/package.json
+++ b/lib/package.json
@@ -1,7 +1,8 @@
 {
     "name": "@ledes-facom/location-resolver",
     "version": "0.1.0",
-    "main": "./lib/cli.js",
+    "main": "./lib/index.js",
+    "types": "./lib/index.d.ts",
     "bin": {
         "location-resolver": "./lib/cli.js"
     },
@@ -15,6 +16,16 @@
     "author": {
         "name": "Hudson Silva Borges"
     },
+    "scripts": {
+        "build": "shx rm -rf lib && yarn tsc",
+        "dev": "ts-node -T ./src/cli.ts",
+        "cli": "node ./lib/cli.js",
+        "test": "yarn jest ./src",
+        "local": "npm i -g && location-resolver",
+        "prepare": "is-ci || husky install || echo 'husky install skipped'",
+        "release": "np --message 'chore: v%s'",
+        "np": "npm rum release"
+    },
     "dependencies": {
         "@keyv/sqlite": "^3.6.5",
         "axios": "^1.3.4",
@@ -22,22 +33,11 @@
         "cli-progress": "^3.12.0",
         "commander": "^10.0.0",
         "consola": "^2.15.3",
-        "cz-conventional-changelog": "^3.3.0",
         "fast-csv": "^4.3.6",
         "keyv": "^4.5.2",
         "keyv-file": "^0.2.0",
         "lodash": "^4.17.21",
-        "tmp-promise": "^3.0.3"
-    },
-    "scripts": {
-        "build": "shx rm -rf lib && yarn tsc",
-        "dev": "ts-node -T ./src/cli.ts",
-        "start": "node ./lib/cli.js",
-        "test": "yarn jest ./src",
-        "local": "npm i -g && location-resolver",
-        "prepare": "is-ci || husky install || echo 'husky install skipped'",
-        "release": "np --message 'chore: v%s'",
-        "np": "npm rum release"
+        "shelljs": "^0.8.5"
     },
     "devDependencies": {
         "@commitlint/cli": "^17.5.0",
@@ -47,7 +47,9 @@
         "@types/jest": "^29.5.0",
         "@types/lodash": "^4.14.191",
         "@types/node": "^18.15.7",
+        "@types/shelljs": "^0.8.11",
         "commitizen": "^4.3.0",
+        "cz-conventional-changelog": "^3.3.0",
         "eslint": "^8.36.0",
         "eslint-config-prettier": "^8.8.0",
         "eslint-config-xo": "^0.43.1",
@@ -56,8 +58,8 @@
         "jest": "^29.5.0",
         "np": "^7.6.4",
         "prettier": "^2.8.6",
-        "shelljs": "^0.8.5",
         "shx": "^0.3.4",
+        "tmp-promise": "^3.0.3",
         "ts-jest": "^29.0.5",
         "ts-node": "^10.9.1",
         "typescript": "^5.0.2"
