--- a/lib/package.json
+++ b/lib/package.json
@@ -17,14 +17,15 @@
         "name": "Hudson Silva Borges"
     },
     "scripts": {
-        "build": "shx rm -rf lib && yarn tsc",
+        "build": "npm run lint && shx rm -rf lib && tsc",
         "dev": "ts-node -T ./src/cli.ts",
         "cli": "node ./lib/cli.js",
-        "test": "yarn jest ./src",
+        "test": "jest ./src",
         "local": "npm i -g && location-resolver",
         "prepare": "is-ci || husky install || echo 'husky install skipped'",
         "release": "np --message 'chore: v%s'",
-        "np": "npm rum release"
+        "np": "npm rum release",
+        "lint": "eslint ./src --ext .ts"
     },
     "dependencies": {
         "@keyv/sqlite": "^3.6.5",
@@ -36,8 +37,9 @@
         "fast-csv": "^4.3.6",
         "keyv": "^4.5.2",
         "keyv-file": "^0.2.0",
+        "load-balancers": "^1.3.52",
         "lodash": "^4.17.21",
-        "shelljs": "^0.8.5"
+        "p-queue": "^6"
     },
     "devDependencies": {
         "@commitlint/cli": "^17.5.0",
@@ -48,16 +50,21 @@
         "@types/lodash": "^4.14.191",
         "@types/node": "^18.15.7",
         "@types/shelljs": "^0.8.11",
+        "@typescript-eslint/eslint-plugin": "^5.56.0",
+        "@typescript-eslint/parser": "^5.56.0",
         "commitizen": "^4.3.0",
         "cz-conventional-changelog": "^3.3.0",
         "eslint": "^8.36.0",
         "eslint-config-prettier": "^8.8.0",
         "eslint-config-xo": "^0.43.1",
+        "eslint-plugin-jest": "^27.2.1",
+        "eslint-plugin-unused-imports": "^2.0.0",
         "husky": "^8.0.0",
         "is-ci": "^3.0.1",
         "jest": "^29.5.0",
         "np": "^7.6.4",
         "prettier": "^2.8.6",
+        "shelljs": "^0.8.5",
         "shx": "^0.3.4",
         "tmp-promise": "^3.0.3",
         "ts-jest": "^29.0.5",
