--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "bin": {
-    "location-resolver": "./lib/cli.js"
+    "location-resolver": "./lib/cli.js",
+    "location-resolver-server": "./lib/server.js"
   },
   "license": "MIT",
   "repository": {
@@ -19,9 +20,11 @@
   "scripts": {
     "build": "npm run lint && shx rm -rf lib && tsc",
     "dev": "ts-node -T ./src/cli.ts",
+    "dev:server": "ts-node -T ./src/server.ts",
     "cli": "node ./lib/cli.js",
     "test": "jest ./src",
     "local": "npm i -g && location-resolver",
+    "local:server": "npm i -g && location-resolver-server",
     "prepare": "is-ci || husky install || echo 'husky install skipped'",
     "release": "np --message 'chore: v%s'",
     "np": "npm rum release",
@@ -33,8 +36,11 @@
     "bluebird": "^3.7.2",
     "cli-progress": "^3.12.0",
     "commander": "^10.0.0",
+    "compression": "^1.7.4",
     "consola": "^2.15.3",
+    "express": "^4.18.2",
     "fast-csv": "^4.3.6",
+    "helmet": "^6.0.1",
     "keyv": "^4.5.2",
     "keyv-file": "^0.2.0",
     "load-balancers": "^1.3.52",
@@ -46,6 +52,8 @@
     "@commitlint/config-conventional": "^17.4.4",
     "@types/bluebird": "^3.5.38",
     "@types/cli-progress": "^3.11.0",
+    "@types/compression": "^1.7.2",
+    "@types/express": "^4.17.17",
     "@types/jest": "^29.5.0",
     "@types/lodash": "^4.14.191",
     "@types/node": "^18.15.7",
