test: adiciona testes a LocationCache e helpers (readCSV)

--- a/lib/package.json
+++ b/lib/package.json
@@ -22,7 +22,7 @@
         "dev": "ts-node -T ./src/cli.ts",
         "dev:server": "ts-node -T ./src/server.ts",
         "cli": "node ./lib/cli.js",
-        "test": "jest ./src",
+        "test": "jest ./src --coverage --collectCoverageFrom='src/**/*.ts'",
         "local": "npm i -g && location-resolver",
         "local:server": "npm i -g && location-resolver-server",
         "prepare": "is-ci || husky install || echo 'husky install skipped'",
@@ -58,6 +58,7 @@
         "@types/lodash": "^4.17.0",
         "@types/node": "^20.11.30",
         "@types/shelljs": "^0.8.15",
+        "@types/tmp": "^0.2.6",
         "@typescript-eslint/eslint-plugin": "^7.3.1",
         "@typescript-eslint/parser": "^7.3.1",
         "commitizen": "^4.3.0",
