--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "keyv-file": "^0.3.1",
     "load-balancers": "^1.3.52",
     "lodash": "^4.17.21",
-    "p-queue": "^6"
+    "p-queue": "^6",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.2.1",
@@ -55,6 +57,8 @@
     "@types/lodash": "^4.17.0",
     "@types/node": "^20.11.30",
     "@types/shelljs": "^0.8.15",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "@types/tmp": "^0.2.6",
     "@typescript-eslint/eslint-plugin": "^7.3.1",
     "@typescript-eslint/parser": "^7.3.1",
